[tool.poetry]
name = "atp-learn"
version = "0.1.0"
description = ""
authors = ["Alejandro Caravaca Puchades <59510094+acpuchades@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"
lxml = "^5.2.2"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
